# aci

./: .env.example  .env.shared  .gitignore  .mcp.json  .pre-commit-config.yaml  CAPABILITY_MANIFEST.md  Dockerfile.server  Dockerfile.testing  LLM.md  README  README.md  SECURITY.md  bug_analysis_and_fixes.md  compose.yml  db_init.sh  integration-implementation.md  integrations.md  pull-request.md  pyproject.toml  rails_integration_guide.md
.claude/agents/: aci-integration-builder.md
.codex-plugin/: plugin.json
.github/codeql/: codeql-config.yml
.github/scripts/: integration_detect_changed_files.sh  integration_pr_review.py
.github/workflows/: backend-deployment.yml  backend.yml  backend_forked.yml  ci.yaml  ci.yml  codeql.yml  compose-test.yml  devportal.yml  frontend-deployment.yml  hol-skill-validate.yml  integration_code_review.yml
aci/common/: utils.py
aci/server/: config.py  main.py
aipolabs/cli/: README.md  config.py
aipolabs/common/: config.py  embeddings.py  encryption.py  enums.py  exceptions.py  filter.py  logging.py  processor.py  utils.py  validator.py
aipolabs/server/: acl.py  config.py  dependencies.py  dependency_check.py  main.py  oauth2.py  oauth2_credentials_manager.py  quota_manager.py  security_credentials_manager.py  sentry.py
apps/: test.json
apps/accredible/: functions.json
apps/active_campaign/: functions.json
apps/aidbase/: functions.json
apps/airtable/: functions.json
apps/all_images/: functions.json
apps/apaleo/: app.json
apps/apitemplate/: app.json
backend/: .env.example  .env.prod  .pre-commit-config.yaml  Dockerfile.runner  Dockerfile.server  Dockerfile.server.prod  README.md  compose.test.yml  compose.yml  conftest.py  fix.md  pyproject.toml
frontend/: .env.example  .env.prod  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
scripts/: create-kms-encryption-key.sh  seed-apps.sh  seed.sh
(+570 files in other folders)
